--- a/ccp/src/main/AndroidManifest.xml
+++ b/ccp/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hbb20">
+    package="com.countrypicker">
 
     <application
         android:allowBackup="true"
